--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="container">
     <section id="about">
       <h2>About Us</h2>
-      <p><strong>ASH Civic Partners</strong> is a philanthropic initiative offering <strong>free Community Economic Impact Reports</strong> for small businesses and startups. We believe in the power of data and storytelling to help communities thrive.</p>
+      <p><strong>ASH Civic Partners</strong> is a philanthropic, student led initiative offering <strong>free Community Economic Impact Reports</strong> for small businesses and startups. We believe in the power of data and storytelling to help communities thrive.</p>
     </section>
 
     <section id="services">
